add jwt auth support to swagger
