# apps/api/main.go
@@ -18,6 +18,10 @@ import (
 // @description This is the 4ks api
 
 // @host local.4ks.io
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
 // @BasePath /api
 func main() {
 	tp := tracing.InitTracerProvider()
