# libs/ts/api-fetch/docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/recipes": {
             "post": {
-                "description": "Get a recipe by ID",
+                "description": "Create a new recipe",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,7 +21,7 @@
                 "tags": [
                     "Recipes"
                 ],
-                "summary": "Get a recipe by ID",
+                "summary": "Create a new recipe",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -69,7 +69,7 @@
         },
         "/recipes/{recipeId}": {
             "get": {
-                "description": "Create a new recipe",
+                "description": "Get a recipe by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -79,7 +79,7 @@
                 "tags": [
                     "Recipes"
                 ],
-                "summary": "Create a new recipe",
+                "summary": "Get a recipe by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -246,6 +246,16 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
